<resources>
    <string name="app_name">akwukwo</string>
    <string name="akwukwo">AKWUKWO</string>
    <string name="single_player">single player</string>
    <string name="multiplayer">multiplayer</string>
    <string name="back">back</string>
    <string name="hot_sit">hot-sit</string>
    <string name="options">options</string>
    <string name="shop">shop</string>
    <string name="music">music</string>
    <string name="sounds">sounds</string>
    <string name="hotseat">hotseat</string>
</resources>